ImageServer V1  Committer: Welington Andrade <StarLord@hellfire.outland>  On branch master  Your branch is up to date with 'origin/master'.  Changes to be committed: 	modified:   Dockerfile 	modified:   README.md 	deleted:    build-cloudformation.py 	deleted:    build-cloudformation.template 	modified:   buildspec.yml 	new file:   docker-compose.yml 	deleted:    fargate-cloudformation.py 	deleted:    fargate-cloudformation.template 	deleted:    nginx.conf 	deleted:    nginx.vh.default.conf 	new file:   nginx/certificados/AddTrustExternalCARoot.crt 	new file:   nginx/certificados/SSLBlindado.crt 	new file:   nginx/certificados/ca-bundle.crt 	new file:   nginx/certificados/ca-bundle.trust.crt 	new file:   nginx/certificados/dhparam.pem 	new file:   nginx/certificados/images2.centauro.com.br.crt 	new file:   nginx/certificados/images2.centauro.com.br.key 	new file:   nginx/certificados/images2.centauro.com.br_chain.crt 	new file:   nginx/conf.d/images.centauro.com.br.conf 	new file:   nginx/html/50x.html 	new file:   nginx/html/index.html 	new file:   nginx/html/semimagem.jpg 	new file:   nginx/nginx.conf

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,5 @@
-# AWS CodeBuild buildspec to build the nginx alpine image
-# By Jason Umiker (jason.umiker@gmail.com)
+# AWS CodeBuild buildspec to build the nginx image
+# By WelingtonAndrade (welewil@gmail.com)
 
 # This requires the following environment variables be set on the Project:
 # AWS_DEFAULT_REGION (Supplied by CodeBuild)
